--- a/css/style.css
+++ b/css/style.css
@@ -50,14 +50,24 @@ text {
 }
 
 text.valueLabel {
-    font-weight: 300;
+    font-weight: 700;
+    font-size: 18px;
+    fill: #505050;
+    dominant-baseline: middle;
+}
+
+text.valueLabelArea {
+    font-weight: 700;
+    font-size: 14px;
     fill: #505050;
     dominant-baseline: middle;
 }
 
 text.timeText {
+    font-family: 'Lato', sans-serif;
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 900;
+    font-style: italic;
     fill: #505050;
 }
 
@@ -130,4 +140,10 @@ text.label {
     border-radius: 2px;
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
+}
+
+
+#chartDiv {
+    background-image: url(../img/background.png);
+    background-size: 950px 950px;
 }
