--- a/css/style.css
+++ b/css/style.css
@@ -69,10 +69,10 @@ text.valueLabelArea {
 
 text.timeText {
     font-family: 'Lato', sans-serif;
-    font-size: 20px;
+    font-size: 45pt;
     font-weight: 900;
     font-style: italic;
-    fill: #505050;
+    fill: #808285;
 }
 
 .xAxis > .tick line {
