--- a/css/style.css
+++ b/css/style.css
@@ -163,13 +163,11 @@ text.label {
     background-image: url(../img/background.png);
     background-size: 950px 950px;
     position: absolute;
-    outline: 34px solid black;
-    margin-bottom: 30px;
+    box-shadow: 0px 0px 226px #000000;
 }
 
 #chartDivForeground {
     background-image: url(../img/foreground.png);
     background-size: 950px 950px;
     position: absolute;
-    margin-bottom: 30px;
 }
